# challenge_qua

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
include/: qua.hpp
src/: qua.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
tests/helpers/: utils.cpp  utils.hpp
